2001-07-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 15409: Src/Zle/computil.c: fix for 15407; there may be sets
	without matches

	* 15407: Completion/Base/Utility/_describe,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo,
	Src/Zle/complist.c, Src/Zle/compresult.c, Src/Zle/computil.c:
	add list-grouped option to make options and such be grouped
	together if they have the same description; matches with
	line-display strings can be hidden; hi and du capabalities in
	complist are only used if set by the user

	* 15402 (Akinora Musha): Completion/Unix/Command/_cvs: add
	support for -R option on BSDs

2001-07-17  Oliver Kiddle  <opk@zsh.org>

	* 15393 (Akinori Musha): Completion/Unix/Command/_chown: use
	colon separator for BSD

2001-07-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 15400: Completion/Unix/Type/_path_files,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo: add
	preserve-prefix style to keep pathname prefix unchanged

2001-07-13  Andrej Borsenkow  <bor@zsh.org>

	* 15278 (Sven), 15390: Completion/Unix/Command/_mount,
	Completion/Unix/Type/_path_files: more Cygwin support
	15278 was accidentally committed by me

2001-07-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 15389: Completion/Unix/Type/_files,
	Completion/Unix/Type/_path_files: make _files not use its own
	description if there is one from a calling function; improve
	-P-prefix handling in _path_files

2001-07-11  Bart Schaefer  <schaefer@zsh.org>

	* 15375: Doc/Zsh/options.yo: Explain the effect of CORRECT on
	HASH_CMDS et al.

2001-07-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 15357: Completion/Base/Completer/_prefix, Src/Zle/compcore.c,
	Src/Zle/zle_tricky.c: prefix completion: make e-o-c-p leave a
	space before the cursor, make _prefix leave the cursor after
	the inserted match even if only a single match; and make the
	C-code not show explanation strings if the completion function
	it doesn't want a list

2001-07-10  Bart Schaefer  <schaefer@zsh.org>
